--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,15 +10,21 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 20
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v1.4.4
       with:
         java-version: '20'
         distribution: 'temurin'
         cache: maven
+    - name: Setup Maven
+      # You may pin to the exact commit or the version.
+      # uses: stCarolas/setup-maven@07fbbe97d97ef44336b7382563d66743297e442f
+      uses: stCarolas/setup-maven@v.4.5
+      with:
+        maven-version: 3.9.3
     - name: Build with Maven
       run: mvn clean verify
