--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,6 @@ on:
 jobs:
 
   test:
-    env:
-      url: https://demoqa.com/
-      timeOut: 10
-      browser: chrome
       
     name: Test
     runs-on: ubuntu-latest
@@ -25,5 +21,11 @@ jobs:
           java-version: 20
       - name: Maven Package
         run: mvn -B clean package -DskipTests
+      - name: Read value from Properties-file
+        id: read_property
+        uses: christian-draeger/read-properties@1.1.1
+        with:
+          path: '.\\src\\test\\resources\\config\\framework.properties'
+          properties: 'timeOut browser'
       - name: Maven Verify
         run: mvn -B clean verify
