--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         id: read_property
         uses: christian-draeger/read-properties@1.1.1
         with:
-          path: '.\\src\\test\\resources\\config\\framework.properties'
+          path: '.\src\test\resources\config\framework.properties'
           properties: 'timeOut browser'
       - name: Maven Verify
         run: mvn -B clean verify
