--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,11 @@ jobs:
           java-version: 20
       - name: Maven Package
         run: mvn -B clean package -DskipTests
-      - name: Read value from Properties-file
-        id: read_property
-        uses: christian-draeger/read-properties@1.1.1
+      - uses: madhead/read-java-properties@latest
+        id: all
         with:
-          path: '.\src\test\resources\config\framework.properties'
-          properties: 'timeOut browser'
+          file: framework.properties
+          all: true
+          
       - name: Maven Verify
         run: mvn -B clean verify
