--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
     <scope>test</scope>
 </dependency>
 
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>5.3.1</version>
+    <scope>test</scope>
+</dependency>
+
   </dependencies>
 
   <build>
