--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: 20
       - name: Maven Package
         run: mvn -B clean package -DskipTests
