--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,11 @@
     <version>2.13.0</version>
 </dependency>
 
-
-
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.3</version>
+</dependency>
   </dependencies>
 
   <build>
