--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,12 @@ jobs:
           java-version: 20
           cache: maven
 
-      - uses: browser-actions/setup-chrome@latest
-      - run: chrome --version
+      - name: Remove Chrome
+        run: sudo apt purge google-chrome-stable
+      - name: Remove default Chromium
+        run: sudo apt purge chromium-browser
+      - name: Install a new Chromium
+        run: sudo apt install -y chromium-browser
       - name: Maven Package
         run: mvn -B clean package -DskipTests
           
