--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,10 @@ jobs:
           
       - name: Maven Verify
         run: mvn -B clean verify
+
+      - name: Deploy
+        if: success() || failure()
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{secrets.GITHUB_TOKEN}}
+          publish_dir: ./ExtentReports
