--- a/pom.xml
+++ b/pom.xml
@@ -132,10 +132,7 @@
           <version>2.22.1</version>
           <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>api.xml</suiteXmlFile>
-            <suiteXmlFile>chrome.xml</suiteXmlFile>
-            <suiteXmlFile>edge.xml</suiteXmlFile>
-            <suiteXmlFile>firefox.xml</suiteXmlFile>
+            <suiteXmlFile>test.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
         </plugin>
