--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,19 @@ on:
      - cron: '0 1,2,3,5,6,7,9,10,11 * * *'
 
 jobs:
-
+  clean-logs:
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - uses: igorjs/gh-actions-clean-workflow@v4
+        with:
+          token: ${{secrets.GITHUB_TOKEN}} # optional
+          days_old: 100 # optional
+          runs_to_keep: 0 # optional
   test:
-      
     name: Test
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4.1.0
       - name: Set up JDK 20
