--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,8 @@ jobs:
     steps:
       - uses: igorjs/gh-actions-clean-workflow@v4
         with:
-          token: ${{secrets.GITHUB_TOKEN}} # optional
-          days_old: "100" # optional
-          runs_to_keep: 0 # optional
+          days_old: "14" # optional
+          runs_to_keep: "2" # optional
   test:
     name: Test
     runs-on: ubuntu-latest
