--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,9 @@
         <artifactId>extentreports</artifactId>
         <version>5.1.0</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-devtools-v119 -->
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-devtools-v120</artifactId>
+        <artifactId>selenium-devtools-v119</artifactId>
         <version>4.16.0</version>
     </dependency>
     <dependency>
@@ -65,14 +64,12 @@
         <artifactId>json-simple</artifactId>
         <version>1.1.1</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-<dependency>
-    <groupId>org.seleniumhq.selenium</groupId>
-    <artifactId>selenium-java</artifactId>
-    <version>4.15.0</version>
-</dependency>
-
     <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>4.15.0</version>
+    </dependency>
+s    <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
         <version>7.8.0</version>
