--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <artifactId>selenium-java</artifactId>
         <version>4.15.0</version>
     </dependency>
-s    <dependency>
+    <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
         <version>7.8.0</version>
