--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: windows-latest
+    runs-on: ubuntu-18.04
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
