--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v4.0.0
         with:
-          distribution: 'openjdk'
+          distribution: 'oracle'
           java-version: 21.0.1
           
       - name: Maven Verify
