--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,16 @@
   </properties>
   <dependencies>
     <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.14.1</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.14.1</version>
+    </dependency>
+    <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
         <version>2.10.1</version>
@@ -38,16 +48,6 @@
         <artifactId>slf4j-simple</artifactId>
         <version>2.0.9</version>
         <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-api</artifactId>
-        <version>3.0.0-alpha1</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-core</artifactId>
-        <version>3.0.0-alpha1</version>
     </dependency>
     <dependency>
         <groupId>io.github.cdimascio</groupId>
