--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - uses: actions/checkout@v4.1.1
+        # Run Docker Compose Action
+      - uses: adambirds/docker-compose-action@v1.5.0
+        with:
+                  compose-file: "./docker/docker-compose.yml"
       - name: Set up JDK 21
         uses: actions/setup-java@v4.0.0
         with:
